NXT-1642: Updating node recommendation names when loading them
* This leads to trouble in the Classic UI otherwise
* Replaced the `existsInRepository` by the `getNameFromRepository` initialization parameter
* Updated the tests and test this behavior as well

NXT-1642 (NPE thrown from WorkflowCoach when switching back to Classic UI from Modern UI)